Update Java to v25
Closes: #3242